# hearth

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
.impeccable/: config.json
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
