[package]
name = "hearth"
version = "1.0.0"
description = "Personal Windows customization hub"
authors = ["you"]
edition = "2021"

[lib]
name = "hearth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hearth"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread"] }
zip = { version = "2", default-features = false, features = ["deflate", "deflate64", "bzip2"] }
winreg = "0.52"
